# cs225a

./: .gitignore  CMakeLists.txt  Makefile  README.md
arduino/Baseballbot_glove/: Baseballbot_glove.ino
arduino/Baseballbot_receiver/: Baseballbot_receiver.ino
collision_demo/: CMakeLists.txt  controller_demo.cpp  cup.urdf  panda_collision.urdf  simviz_demo.cpp  world.urdf
drivers/PythonClient/: MoCapData.py  NatNetClient.py  PythonClient.pyproj  PythonSample.py  StreamData.py  TestGraphics.py
homework/: CMakeLists.txt
homework/hw0/: CMakeLists.txt  hw0-viz.cpp  hw0.cpp  q2-e-i.txt  q2-e-ii.txt  q2-f-i.txt  q2-f-ii.txt  redis_keys.h  rprbot.urdf  simviz_config.xml  world.urdf
homework/hw1/: CMakeLists.txt  hw1-simviz.cpp  hw1.cpp  redis_keys.h  simviz_config.xml  world.urdf
homework/hw2/: CMakeLists.txt  hw2-simviz.cpp  hw2.cpp  redis_keys.h  simviz_config.xml  world.urdf
homework/hw3/: CMakeLists.txt  hw3-simviz.cpp  hw3.cpp  redis_keys.h  simviz_config.xml  world.urdf
hw0/: CMakeLists.txt  hw0.cpp  hw0_viz.cpp  rprbot.urdf  world.urdf
hw0/data_files/: q2-f-ii.txt
hw0/plots/: plotting_hw0.py
hw1/: CMakeLists.txt  hw1.cpp  panda_arm_controller.urdf  simviz_hw1.cpp  simviz_hw1_slow.cpp  world.urdf
hw2/: CMakeLists.txt  hw2.cpp  panda_arm.urdf  world.urdf
hw3/: CMakeLists.txt  hw3.cpp  panda_arm.urdf  simviz_hw3_slow.cpp
hw3_solution/: CMakeLists.txt  hw3.cpp  simviz_hw3.cpp  world.urdf
include/: object.h
lecture2_demo/: CMakeLists.txt  controller.cpp  rbot.urdf  simulation.cpp  simviz.cpp  visualization.cpp  world.urdf
mmp_panda_example/: CMakeLists.txt  controller.cpp  mmp_panda.urdf  simviz.cpp  world_mmp_panda.urdf
model/iiwa7/: kuka_iiwa.urdf
model/mmp_two_arm_panda/: base.blend1
model/mmp_two_arm_panda/mmp_panda/meshes/: panda_base.mtl
model/ocean1/ocean1_graphics/: HandO2_half_open.mtl  HandO2_open.mtl  O2_body_new_head.mtl  endEffectorWPalm_left.mtl  endEffectorWPalm_left_blue.mtl  endEffectorWPalm_right.mtl  endEffector_right.mtl  fingerBase.mtl  finger_base.mtl  lowerArm_right.mtl
model/panda/: panda_arm_hand.urdf
model/quadrotor/: quad_1_arm.urdf  quad_2_arm.urdf
model/quadrotor/dji_arms_exported_urdf_blender/urdf/: dji_arms_exported_urdf.urdf  dji_with_arms.urdf
model/stanbot/: stanbot.urdf
model/stanbot/meshes/visual/: calf.mtl  hand_ascii.mtl
model/toro/meshes/stl/: ankle.stl  empty.stl  head.stl  left_lower_hip.stl  simple_wrist_new.stl  va_left_lower_arm.stl  va_right_shoulder_front.stl
panda_example/: CMakeLists.txt  controller.cpp  simviz.cpp  world_panda.urdf
panda_gripper_example/: CMakeLists.txt  controller.cpp  panda_arm_hand.urdf  simviz.cpp  world.urdf
panda_rotated_gravity/: CMakeLists.txt  controller.cpp  panda_arm.urdf  simviz.cpp  world.urdf
panda_rotated_workspace/: CMakeLists.txt  controller.cpp  keyboard_input.py  simviz.cpp  world.urdf
project_starter/: CMakeLists.txt
project_starter/include/: object.h
project_starter/mmp_panda/: CMakeLists.txt  README.md  controller.cpp  mmp_panda.urdf  redis_keys.h  simviz.cpp  world_mmp_panda.urdf
project_starter/ocean1/: CMakeLists.txt  controller.cpp  redis_keys.h  simviz.cpp  world_ocean1.urdf
project_starter/optitrack/: StreamDataSkeleton.py
project_starter/optitrack/include/: Human.cpp  Human.h
project_starter/optitrack/model/: HRP4c.urdf  HRP4c_green.urdf  HRP4c_original.urdf  HRP4c_purple.urdf  HRP4c_with_collision.urdf  human.urdf  mmp_panda.urdf  toro.urdf
project_starter/panda/: CMakeLists.txt  README.md  controller.cpp  panda_arm.urdf  panda_arm_hand.urdf  redis_keys.h  simviz.cpp  world.urdf
project_starter/pandabat/: CMakeLists.txt  controller.cpp  controller2.cpp  controller2.cpp:Zone.Identifier  redis_keys.h  simviz.cpp  trajectoryData  trajectoryData.txt  world.urdf
project_starter/spot/: CMakeLists.txt  README.md  controller.cpp  redis_keys.h  simviz.cpp  spot.urdf  world_spot.urdf
project_starter/toro/: CMakeLists.txt  controller.cpp  redis_keys.h  simviz.cpp  toro.urdf  world_toro.urdf
python_scripts/: key_listener.py  trajectory_plotter.py
scripts/: ButtonPublisher.py  ButtonSimulation.py  start_serial_redis.py
stanbot_example/: CMakeLists.txt  controller.cpp  redis_keys.h  simviz.cpp  stanbot.urdf  world_stan.urdf
template_project/: CMakeLists.txt  redis_keys.h  simviz.cpp  world.urdf
toro_example/: CMakeLists.txt  controller.cpp  simviz.cpp  toro.urdf  world_toro.urdf
urdf_models/allegro/: allegro_hand.urdf
urdf_models/allegro/meshes/: base_link_left.mtl  link_15.0_tip.mtl  link_3.0_tip.mtl
urdf_models/mmp_panda/: mmp_panda.urdf  mmp_panda_base.blend  mmp_panda_base.blend1
urdf_models/mmp_two_arm_panda/: base.blend  mmp_panda_two_arm.urdf  mmp_panda_two_arm_base.blend  mmp_panda_two_arm_base.blend1
urdf_models/mmp_two_arm_panda/meshes/: mmp_panda_two_arm_base.mtl
urdf_models/ocean1/: Divebot_Hybrid.urdf  Divebot_Hybrid.yaml  ocean1.urdf  robot_model.urdf  world.urdf
urdf_models/ocean1/full_assembly_gripper_final/: list_joints.py  package.xml  test_dance.py
urdf_models/ocean1/ocean1_graphics/: HandO2.mtl  HandO2_small_with_valve.mtl  HandO2_with_flag.mtl  O2_body_new_head_original.mtl  body_paint.mtl  body_paint_no_lamp.mtl  elbow_right.mtl  fingerBase_blue.mtl  fingerTip.mtl  fingerTip_blue.mtl  finger_tip.mtl  lowerArm_right_original.mtl  shoulderL_right.mtl  shoulderT_left.mtl  upperArm_left_original.mtl  upperArm_right.mtl  wristDiff_right.mtl
urdf_models/ocean1/robot_model/meshes/: h_base.STL  la_3.STL  (+6 more)
urdf_models/panda/: panda_arm.urdf  panda_arm_bat  panda_arm_bat.urdf  panda_arm_controller.urdf  panda_arm_hand.urdf  panda_arm_simulation.urdf
urdf_models/spot/: spot.urdf
urdf_models/spot/meshes/: body.mtl  front_left_hip.mtl  front_left_lower_leg.mtl  front_left_upper_leg.mtl  front_right_hip.mtl  front_right_lower_leg.mtl  front_right_upper_leg.mtl  lidar_mount.mtl  pack_body.mtl  pack_top.mtl  rear_left_hip.mtl  rear_left_lower_leg.mtl  rear_left_upper_leg.mtl  rear_right_hip.mtl  rear_right_lower_leg.mtl  rear_right_upper_leg.mtl  velo.mtl
urdf_models/toro/: toro.urdf
(+76 files in other folders)
